Add local tuning + propagation analysis

--- a/MNIST_interboundary.ipynb
+++ b/MNIST_interboundary.ipynb
@@ -35,24 +35,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "67d38773",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ubuntu/FedEM_Shubh/FedEM/datasets.py:508: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  torch.tensor(mnist_train.data),\n",
-      "/home/ubuntu/FedEM_Shubh/FedEM/datasets.py:509: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  torch.tensor(mnist_test.data)\n",
-      "/home/ubuntu/FedEM_Shubh/FedEM/datasets.py:514: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  torch.tensor(mnist_train.targets),\n",
-      "/home/ubuntu/FedEM_Shubh/FedEM/datasets.py:515: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  torch.tensor(mnist_test.targets)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -65,7 +51,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████| 80/80 [00:00<00:00, 689.94it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████| 80/80 [00:00<00:00, 233.24it/s]\n"
      ]
     },
     {
@@ -79,7 +65,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████| 80/80 [00:00<00:00, 126.79it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████| 80/80 [00:31<00:00,  2.57it/s]\n"
      ]
     },
     {
@@ -117,7 +103,7 @@
      "text": [
       "++++++++++++++++++++++++++++++\n",
       "Global..\n",
-      "Train Loss: 2.306 | Train Acc: 8.092% |Test Loss: 2.305 | Test Acc: 8.112% |\n",
+      "Train Loss: 2.922 | Train Acc: 1.464% |Test Loss: 2.923 | Test Acc: 1.297% |\n",
       "++++++++++++++++++++++++++++++++++++++++++++++++++\n",
       "################################################################################\n"
      ]
@@ -126,7 +112,7 @@
    "source": [
     "# Generating Empty Aggregator to be loaded \n",
     "\n",
-    "setting = 'FedAvg'\n",
+    "setting = 'FedEM'\n",
     "\n",
     "if setting == 'FedEM':\n",
     "    nL = 3\n",
@@ -135,7 +121,7 @@
     "\n",
     "# Manually set argument parameters\n",
     "args_ = Args()\n",
-    "args_.experiment = \"mnist\"\n",
+    "args_.experiment = \"celeba\"\n",
     "args_.method = setting\n",
     "args_.decentralized = False\n",
     "args_.sampling_rate = 1.0\n",
@@ -157,7 +143,7 @@
     "args_.locally_tune_clients = False\n",
     "args_.seed = 1234\n",
     "args_.verbose = 1\n",
-    "args_.save_path = 'weights/mnist_adv/fed_avg_defend/'\n",
+    "args_.save_path = 'weights/celeba_16_adv/fedem_defend/'\n",
     "args_.validation = False\n",
     "\n",
     "# Generate the dummy values here\n",
@@ -166,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "e6194931",
    "metadata": {},
    "outputs": [],
@@ -193,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "f81eaafd",
    "metadata": {},
    "outputs": [],
@@ -305,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "451b5ab3",
    "metadata": {},
    "outputs": [],
@@ -320,10 +306,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "69d80c1e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num_trial: 0\n",
+      "num_trial: 1\n",
+      "num_trial: 2\n",
+      "num_trial: 3\n",
+      "num_trial: 4\n",
+      "num_trial: 5\n",
+      "num_trial: 6\n",
+      "num_trial: 7\n",
+      "num_trial: 8\n",
+      "num_trial: 9\n",
+      "num_trial: 10\n",
+      "num_trial: 11\n",
+      "num_trial: 12\n",
+      "num_trial: 13\n",
+      "num_trial: 14\n",
+      "num_trial: 15\n",
+      "num_trial: 16\n",
+      "num_trial: 17\n",
+      "num_trial: 18\n",
+      "num_trial: 19\n",
+      "num_trial: 20\n",
+      "num_trial: 21\n",
+      "num_trial: 22\n",
+      "num_trial: 23\n",
+      "num_trial: 24\n",
+      "num_trial: 25\n",
+      "num_trial: 26\n",
+      "num_trial: 27\n",
+      "num_trial: 28\n",
+      "num_trial: 29\n",
+      "num_trial: 30\n",
+      "num_trial: 31\n",
+      "num_trial: 32\n",
+      "num_trial: 33\n",
+      "num_trial: 34\n",
+      "num_trial: 35\n",
+      "num_trial: 36\n",
+      "num_trial: 37\n",
+      "num_trial: 38\n",
+      "num_trial: 39\n",
+      "num_trial: 40\n",
+      "num_trial: 41\n",
+      "num_trial: 42\n",
+      "num_trial: 43\n",
+      "num_trial: 44\n",
+      "num_trial: 45\n",
+      "num_trial: 46\n",
+      "num_trial: 47\n",
+      "num_trial: 48\n",
+      "num_trial: 49\n"
+     ]
+    }
+   ],
    "source": [
     "dists_measure_legit = np.zeros([num_trials, model_idx_max])\n",
     "dists_measure_adv = np.zeros([num_trials, model_idx_max])\n",
@@ -373,6 +416,28 @@
     "    for key, value in victim_eps_Eadv.items():\n",
     "        dists_measure_adv_ensemble[i,idx] = np.abs(base_ep_Eadv - value)\n",
     "        idx+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0e58c94e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "legit distance: 28.5895\n",
+      "adv distance: 17.660750000000004\n",
+      "ensemble_adv distance: 8.109000000000002\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('legit distance:', np.nanmean(dists_measure_legit))\n",
+    "print('adv distance:', np.nanmean(dists_measure_adv))\n",
+    "print('ensemble_adv distance:', np.nanmean(dists_measure_adv_ensemble))"
    ]
   },
   {
