--- a/celeba_interboundary.ipynb
+++ b/celeba_interboundary.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "74b6f3ac",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████| 80/80 [00:00<00:00, 171.64it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████| 80/80 [00:00<00:00, 235.67it/s]\n"
      ]
     },
     {
@@ -66,7 +66,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████| 80/80 [00:15<00:00,  5.12it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████| 80/80 [00:31<00:00,  2.54it/s]\n"
      ]
     },
     {
@@ -104,7 +104,7 @@
      "text": [
       "++++++++++++++++++++++++++++++\n",
       "Global..\n",
-      "Train Loss: 3.299 | Train Acc: 2.504% |Test Loss: 3.293 | Test Acc: 2.570% |\n",
+      "Train Loss: 2.922 | Train Acc: 1.464% |Test Loss: 2.923 | Test Acc: 1.297% |\n",
       "++++++++++++++++++++++++++++++++++++++++++++++++++\n",
       "################################################################################\n"
      ]
@@ -113,7 +113,7 @@
    "source": [
     "# Generating Empty Aggregator to be loaded \n",
     "\n",
-    "setting = 'local'\n",
+    "setting = 'FedEM'\n",
     "\n",
     "if setting == 'FedEM':\n",
     "    nL = 3\n",
@@ -144,7 +144,7 @@
     "args_.locally_tune_clients = False\n",
     "args_.seed = 1234\n",
     "args_.verbose = 1\n",
-    "args_.save_path = 'weights/celeba_16_adv/local_defend/'\n",
+    "args_.save_path = 'weights/celeba_16_adv/fedem_defend/'\n",
     "args_.validation = False\n",
     "\n",
     "# Generate the dummy values here\n",
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "e6194931",
    "metadata": {},
    "outputs": [],
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "f81eaafd",
    "metadata": {},
    "outputs": [],
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "451b5ab3",
    "metadata": {},
    "outputs": [],
@@ -307,17 +307,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "8be887a1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function __main__.timeout_handler(signum, frame)>"
+       "<Handlers.SIG_DFL: 0>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "69d80c1e",
    "metadata": {},
    "outputs": [
@@ -370,14 +370,10 @@
       "num_trial: 25\n",
       "num_trial: 26\n",
       "num_trial: 27\n",
-      "Timeout 120 seconds\n",
-      "Clients [12, 0]\n",
       "num_trial: 28\n",
       "num_trial: 29\n",
       "num_trial: 30\n",
       "num_trial: 31\n",
-      "Timeout 120 seconds\n",
-      "Clients [39, 16]\n",
       "num_trial: 32\n",
       "num_trial: 33\n",
       "num_trial: 34\n",
@@ -420,12 +416,8 @@
       "num_trial: 71\n",
       "num_trial: 72\n",
       "num_trial: 73\n",
-      "Timeout 120 seconds\n",
-      "Clients [3, 21]\n",
       "num_trial: 74\n",
       "num_trial: 75\n",
-      "Timeout 120 seconds\n",
-      "Clients [20, 1]\n",
       "num_trial: 76\n",
       "num_trial: 77\n",
       "num_trial: 78\n",
@@ -446,14 +438,10 @@
       "num_trial: 93\n",
       "num_trial: 94\n",
       "num_trial: 95\n",
-      "Timeout 120 seconds\n",
-      "Clients [17, 20]\n",
       "num_trial: 96\n",
       "num_trial: 97\n",
       "num_trial: 98\n",
-      "num_trial: 99\n",
-      "Timeout 120 seconds\n",
-      "Clients [12, 9]\n"
+      "num_trial: 99\n"
      ]
     }
    ],
@@ -518,6 +506,28 @@
     "    for key, value in victim_eps_Eadv.items():\n",
     "        dists_measure_adv_ensemble[i,idx] = np.abs(base_ep_Eadv - value)\n",
     "        idx+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "925dade3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "legit distance: 10.892021276595747\n",
+      "adv distance: 10.039333333333333\n",
+      "ensemble_adv distance: 8.037267080745341\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('legit distance:', np.nanmean(dists_measure_legit))\n",
+    "print('adv distance:', np.nanmean(dists_measure_adv))\n",
+    "print('ensemble_adv distance:', np.nanmean(dists_measure_adv_ensemble))"
    ]
   },
   {
