--- a/celeba_transfer_attack_analysis.ipynb
+++ b/celeba_transfer_attack_analysis.ipynb
@@ -49,7 +49,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████| 80/80 [00:00<00:00, 118.34it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████| 80/80 [00:00<00:00, 234.33it/s]\n"
      ]
     },
     {
@@ -63,7 +63,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████| 80/80 [00:31<00:00,  2.56it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████| 80/80 [00:31<00:00,  2.54it/s]\n"
      ]
     },
     {
@@ -101,7 +101,7 @@
      "text": [
       "++++++++++++++++++++++++++++++\n",
       "Global..\n",
-      "Train Loss: 2.923 | Train Acc: 1.303% |Test Loss: 2.922 | Test Acc: 1.366% |\n",
+      "Train Loss: 2.922 | Train Acc: 1.464% |Test Loss: 2.923 | Test Acc: 1.297% |\n",
       "++++++++++++++++++++++++++++++++++++++++++++++++++\n",
       "################################################################################\n"
      ]
@@ -141,7 +141,7 @@
     "args_.locally_tune_clients = False\n",
     "args_.seed = 1234\n",
     "args_.verbose = 1\n",
-    "args_.save_path = '/home/ubuntu/FedEM_Shubh/FedEM/weights/celeba_16/fedem/'\n",
+    "args_.save_path = '/home/ubuntu/FedEM_Shubh/FedEM/weights/celeba_prop_new/yes_macro_resources/'\n",
     "args_.validation = False\n",
     "\n",
     "# Generate the dummy values here\n",
@@ -447,16 +447,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.86 0.39 0.74 0.84 0.46 0.83 0.46 0.45 0.86 0.76]\n",
-      " [0.83 1.00 1.00 0.83 0.67 0.83 0.67 0.67 0.83 1.00]\n",
-      " [0.71 0.42 0.74 0.65 0.39 0.74 0.61 0.58 0.71 0.74]\n",
-      " [0.88 0.50 0.73 0.82 0.38 0.82 0.43 0.43 0.85 0.73]\n",
-      " [0.36 0.43 0.43 0.36 0.86 0.36 0.71 0.71 0.36 0.43]\n",
-      " [0.79 0.39 0.74 0.76 0.42 0.78 0.47 0.44 0.79 0.75]\n",
-      " [0.22 0.20 0.33 0.20 0.61 0.25 0.80 0.82 0.22 0.37]\n",
-      " [0.50 0.25 0.50 0.50 0.75 0.50 0.75 0.75 0.50 0.50]\n",
-      " [0.78 0.33 0.61 0.78 0.28 0.78 0.28 0.28 0.78 0.67]\n",
-      " [0.76 0.44 0.79 0.71 0.53 0.76 0.64 0.62 0.77 0.82]]\n"
+      "[[1.00 0.00 0.00 0.12 1.00 0.38 0.12 0.00 0.62 1.00]\n",
+      " [0.84 0.12 0.12 0.29 0.84 0.45 0.29 0.04 0.69 0.84]\n",
+      " [0.91 0.10 0.14 0.36 0.88 0.53 0.36 0.05 0.72 0.91]\n",
+      " [0.86 0.10 0.13 0.35 0.86 0.58 0.35 0.04 0.68 0.86]\n",
+      " [1.00 0.00 0.00 0.06 0.89 0.44 0.06 0.00 0.67 1.00]\n",
+      " [0.71 0.00 0.00 0.18 0.65 0.65 0.18 0.00 0.59 0.71]\n",
+      " [0.81 0.11 0.13 0.43 0.83 0.52 0.37 0.07 0.69 0.81]\n",
+      " [0.85 0.05 0.10 0.25 0.90 0.55 0.25 0.00 0.70 0.85]\n",
+      " [0.89 0.06 0.06 0.17 0.94 0.56 0.17 0.06 0.94 0.89]\n",
+      " [1.00 0.17 0.28 0.33 0.94 0.56 0.33 0.17 0.72 1.00]]\n"
      ]
     }
    ],
@@ -493,12 +493,58 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "40"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.isnan(adv_target).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.00, 0.00, 0.00, ..., 0.00, 0.75, 1.00],\n",
+       "       [0.84, 0.12, 0.12, ..., 0.22, 0.75, 0.84],\n",
+       "       [0.91, 0.10, 0.14, ..., 0.23, 0.84, 0.90],\n",
+       "       ...,\n",
+       "       [0.86, 0.15, 0.15, ..., 0.21, 0.81, 0.85],\n",
+       "       [0.94, 0.06, 0.06, ..., 0.10, 0.91, 0.94],\n",
+       "       [1.00, 0.00, 0.00, ..., 0.00, 0.50, 1.00]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adv_target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "adv_target: 0.5491658988098304\n",
-      "adv_miss: 0.12317182715662803\n",
-      "orig_acc: 0.8304266124963761\n"
+      "adv_target: 0.4183496773478077\n",
+      "adv_miss: 0.3291548473091844\n",
+      "orig_acc: 0.5940186578780413\n"
      ]
     }
    ],
@@ -510,23 +556,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.59 0.58 0.58 0.58 0.59 0.59 0.59 0.58 0.57 0.59]\n",
-      " [0.17 0.17 0.17 0.17 0.17 0.17 0.17 0.17 0.17 0.17]\n",
-      " [0.41 0.41 0.41 0.41 0.41 0.41 0.41 0.41 0.41 0.41]\n",
-      " [0.62 0.65 0.65 0.65 0.62 0.62 0.62 0.65 0.65 0.62]\n",
-      " [0.26 0.25 0.25 0.27 0.26 0.26 0.26 0.25 0.26 0.26]\n",
-      " [0.64 0.63 0.63 0.61 0.64 0.64 0.64 0.63 0.62 0.64]\n",
-      " [0.23 0.23 0.23 0.23 0.23 0.23 0.23 0.23 0.22 0.23]\n",
-      " [0.00 0.00 0.00 0.00 0.00 0.00 0.00 0.00 0.00 0.00]\n",
-      " [0.56 0.56 0.56 0.44 0.56 0.56 0.56 0.56 0.44 0.56]\n",
-      " [0.50 0.50 0.51 0.48 0.50 0.50 0.50 0.51 0.49 0.50]]\n"
+      "[[0.50 0.43 0.45 0.43 0.48 0.38 0.45 0.38 0.33 0.48]\n",
+      " [0.61 0.63 0.61 0.63 0.61 0.59 0.61 0.61 0.59 0.61]\n",
+      " [0.76 0.75 0.77 0.74 0.76 0.72 0.76 0.76 0.66 0.75]\n",
+      " [0.55 0.54 0.54 0.54 0.55 0.46 0.54 0.55 0.46 0.55]\n",
+      " [0.59 0.59 0.57 0.59 0.59 0.59 0.57 0.43 0.50 0.59]\n",
+      " [0.19 0.19 0.19 0.19 0.19 0.19 0.19 0.19 0.19 0.19]\n",
+      " [0.65 0.61 0.65 0.58 0.65 0.54 0.62 0.58 0.51 0.65]\n",
+      " [0.55 0.55 0.55 0.55 0.55 0.55 0.55 0.55 0.55 0.55]\n",
+      " [0.39 0.39 0.39 0.39 0.39 0.33 0.39 0.39 0.33 0.39]\n",
+      " [0.39 0.34 0.32 0.32 0.38 0.30 0.35 0.24 0.27 0.38]]\n"
      ]
     }
    ],
@@ -537,23 +583,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.07 0.07 0.07 0.12 0.07 0.07 0.07 0.07 0.14 0.07]\n",
-      " [0.65 0.67 0.67 0.69 0.65 0.67 0.69 0.65 0.65 0.65]\n",
-      " [0.75 0.74 0.76 0.74 0.75 0.76 0.73 0.75 0.74 0.75]\n",
-      " [0.62 0.65 0.64 0.62 0.62 0.64 0.64 0.62 0.64 0.62]\n",
-      " [0.15 0.26 0.24 0.28 0.15 0.26 0.26 0.15 0.26 0.15]\n",
-      " [0.33 0.33 0.33 0.33 0.33 0.38 0.33 0.33 0.33 0.33]\n",
-      " [0.54 0.55 0.55 0.57 0.54 0.55 0.55 0.54 0.57 0.54]\n",
-      " [0.65 0.50 0.60 0.50 0.65 0.60 0.50 0.65 0.50 0.65]\n",
-      " [0.44 0.44 0.44 0.44 0.44 0.44 0.44 0.44 0.44 0.44]\n",
-      " [0.15 0.17 0.15 0.17 0.15 0.15 0.17 0.15 0.18 0.15]]\n"
+      "[[0.00 0.00 0.00 0.00 0.00 0.00 0.00 0.00 0.00 0.00]\n",
+      " [0.41 0.41 0.41 0.41 0.41 0.43 0.41 0.45 0.47 0.41]\n",
+      " [0.53 0.55 0.54 0.57 0.54 0.63 0.54 0.54 0.68 0.53]\n",
+      " [0.35 0.38 0.38 0.38 0.38 0.41 0.38 0.41 0.42 0.35]\n",
+      " [0.17 0.22 0.22 0.22 0.17 0.22 0.22 0.22 0.22 0.17]\n",
+      " [0.06 0.06 0.06 0.06 0.06 0.06 0.06 0.06 0.06 0.06]\n",
+      " [0.46 0.48 0.48 0.48 0.48 0.48 0.48 0.48 0.50 0.46]\n",
+      " [0.40 0.45 0.40 0.45 0.40 0.45 0.40 0.45 0.55 0.40]\n",
+      " [0.22 0.22 0.17 0.33 0.17 0.33 0.22 0.17 0.33 0.22]\n",
+      " [0.00 0.00 0.00 0.00 0.00 0.00 0.00 0.00 0.06 0.00]]\n"
      ]
     }
    ],
@@ -563,23 +609,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.00 0.00 0.00 0.00 0.00 0.00 0.00 0.00 0.00 0.00]\n",
-      " [0.10 0.10 0.10 0.10 0.10 0.10 0.10 0.10 0.10 0.10]\n",
-      " [0.07 0.07 0.07 0.07 0.07 0.07 0.07 0.07 0.08 0.07]\n",
-      " [0.06 0.04 0.04 0.03 0.06 0.04 0.04 0.06 0.04 0.06]\n",
-      " [0.02 0.09 0.04 0.09 0.02 0.06 0.09 0.02 0.09 0.02]\n",
-      " [0.00 0.00 0.00 0.00 0.00 0.00 0.00 0.00 0.00 0.00]\n",
-      " [0.01 0.01 0.00 0.01 0.01 0.00 0.01 0.01 0.01 0.01]\n",
-      " [0.00 0.00 0.00 0.05 0.00 0.00 0.00 0.00 0.05 0.00]\n",
-      " [0.00 0.00 0.06 0.00 0.00 0.06 0.00 0.00 0.00 0.00]\n",
-      " [0.01 0.03 0.01 0.04 0.01 0.01 0.03 0.01 0.04 0.01]]\n"
+      "[[0.07 0.10 0.07 0.07 0.07 0.02 0.07 0.07 0.02 0.07]\n",
+      " [0.12 0.14 0.12 0.14 0.12 0.18 0.12 0.10 0.22 0.12]\n",
+      " [0.15 0.17 0.14 0.17 0.15 0.18 0.16 0.17 0.22 0.15]\n",
+      " [0.14 0.12 0.12 0.12 0.13 0.12 0.10 0.09 0.13 0.13]\n",
+      " [0.11 0.11 0.13 0.13 0.11 0.11 0.11 0.13 0.09 0.11]\n",
+      " [0.10 0.14 0.10 0.10 0.10 0.00 0.10 0.10 0.00 0.10]\n",
+      " [0.07 0.07 0.06 0.07 0.07 0.10 0.06 0.06 0.14 0.07]\n",
+      " [0.15 0.10 0.15 0.10 0.15 0.10 0.10 0.10 0.10 0.15]\n",
+      " [0.11 0.11 0.11 0.11 0.11 0.06 0.11 0.11 0.06 0.11]\n",
+      " [0.07 0.07 0.08 0.07 0.06 0.06 0.07 0.08 0.06 0.07]]\n"
      ]
     }
    ],
