--- a/cifar10_transfer_attack_analysis_tuning.ipynb
+++ b/cifar10_transfer_attack_analysis_tuning.ipynb
@@ -49,7 +49,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████| 80/80 [00:00<00:00, 270.41it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████| 80/80 [00:00<00:00, 265.60it/s]\n"
      ]
     },
     {
@@ -63,7 +63,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████| 80/80 [00:15<00:00,  5.15it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 80/80 [00:38<00:00,  2.07it/s]\n"
      ]
     },
     {
@@ -101,7 +101,7 @@
      "text": [
       "++++++++++++++++++++++++++++++\n",
       "Global..\n",
-      "Train Loss: 2.300 | Train Acc: 10.068% |Test Loss: 2.300 | Test Acc: 10.260% |\n",
+      "Train Loss: 2.292 | Train Acc: 12.373% |Test Loss: 2.294 | Test Acc: 11.886% |\n",
       "++++++++++++++++++++++++++++++++++++++++++++++++++\n",
       "################################################################################\n"
      ]
@@ -110,7 +110,7 @@
    "source": [
     "# Generating Empty Aggregator to be loaded \n",
     "\n",
-    "setting = 'FedAvg'\n",
+    "setting = 'FedEM'\n",
     "\n",
     "if setting == 'FedEM':\n",
     "    nL = 3\n",
@@ -141,7 +141,7 @@
     "args_.locally_tune_clients = False\n",
     "args_.seed = 1234\n",
     "args_.verbose = 1\n",
-    "args_.save_path = '/home/ubuntu/FedEM_Shubh/FedEM/weights/cifar10_adv/fed_avg_defend/'\n",
+    "args_.save_path = 'weights/cifar_10/fedem_tune/40/'\n",
     "args_.validation = False\n",
     "args_.tune_steps = 10\n",
     "\n",
@@ -458,16 +458,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.09 0.00 0.09 0.00 0.03 0.00 0.03 0.00 0.00 0.12]\n",
-      " [0.10 0.00 0.27 0.00 0.03 0.00 0.05 0.00 0.00 0.38]\n",
-      " [0.00 0.00 0.22 0.00 0.00 0.00 0.00 0.00 0.00 0.11]\n",
-      " [0.23 0.00 0.31 0.00 0.05 0.00 0.07 0.00 0.00 0.45]\n",
-      " [0.06 0.00 0.29 0.00 0.16 0.00 0.08 0.00 0.00 0.39]\n",
-      " [0.08 0.00 0.30 0.00 0.05 0.02 0.08 0.00 0.00 0.34]\n",
-      " [0.18 0.00 0.20 0.00 0.09 0.00 0.17 0.00 0.00 0.39]\n",
-      " [0.00 0.00 0.33 0.00 0.00 0.00 0.00 0.00 0.00 0.33]\n",
-      " [0.26 0.00 0.35 0.00 0.11 0.03 0.07 0.00 0.00 0.48]\n",
-      " [0.00 0.00 0.10 0.00 0.02 0.00 0.02 0.00 0.00 0.17]]\n"
+      "[[0.62 0.35 0.56 0.53 0.50 0.50 0.53 0.00 0.50 0.56]\n",
+      " [0.68 0.55 0.68 0.57 0.55 0.53 0.60 0.00 0.58 0.72]\n",
+      " [0.78 0.56 0.89 0.61 0.67 0.61 0.72 0.00 0.61 0.89]\n",
+      " [0.71 0.58 0.70 0.61 0.59 0.60 0.57 0.00 0.57 0.78]\n",
+      " [0.74 0.52 0.77 0.64 0.69 0.59 0.64 0.00 0.64 0.81]\n",
+      " [0.64 0.42 0.66 0.52 0.53 0.57 0.56 0.00 0.51 0.69]\n",
+      " [0.82 0.65 0.77 0.62 0.68 0.67 0.70 0.00 0.62 0.82]\n",
+      " [0.00 0.00 0.00 0.00 0.00 0.00 0.00 0.00 0.00 0.00]\n",
+      " [0.78 0.66 0.74 0.64 0.66 0.66 0.66 0.00 0.69 0.77]\n",
+      " [0.62 0.56 0.62 0.52 0.50 0.48 0.50 0.00 0.52 0.71]]\n"
      ]
     }
    ],
@@ -526,13 +526,13 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.09, 0.00, 0.09, ..., 0.00, 0.09, 0.00],\n",
-       "       [0.10, 0.00, 0.27, ..., 0.00, 0.20, 0.03],\n",
-       "       [0.00, 0.00, 0.22, ..., 0.00, 0.06, 0.00],\n",
+       "array([[0.62, 0.35, 0.56, ..., 0.41, 0.50, 0.47],\n",
+       "       [0.68, 0.55, 0.68, ..., 0.43, 0.58, 0.48],\n",
+       "       [0.78, 0.56, 0.89, ..., 0.67, 0.61, 0.56],\n",
        "       ...,\n",
-       "       [0.15, 0.00, 0.27, ..., 0.00, 0.12, 0.03],\n",
-       "       [0.09, 0.00, 0.17, ..., 0.00, 0.31, 0.01],\n",
-       "       [0.13, 0.00, 0.25, ..., 0.00, 0.18, 0.14]])"
+       "       [0.67, 0.48, 0.68, ..., 0.59, 0.56, 0.52],\n",
+       "       [0.68, 0.58, 0.67, ..., 0.46, 0.67, 0.60],\n",
+       "       [0.64, 0.48, 0.68, ..., 0.46, 0.58, 0.59]])"
       ]
      },
      "execution_count": 11,
@@ -553,9 +553,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "adv_target: 0.0751661939982277\n",
-      "adv_miss: 0.35647395094752143\n",
-      "orig_acc: 0.7054661020636559\n"
+      "adv_target: 0.5570165127324752\n",
+      "adv_miss: 0.03562828139252722\n",
+      "orig_acc: 0.7564759723842144\n"
      ]
     }
    ],
@@ -567,23 +567,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.62 0.52 0.56 0.44 0.50 0.38 0.65 0.04 0.17 0.67]\n",
-      " [0.73 0.83 0.72 0.77 0.80 0.92 0.38 0.40 0.47 0.62]\n",
-      " [0.73 0.62 0.73 0.54 0.62 0.42 0.58 0.12 0.35 0.73]\n",
-      " [0.80 0.83 0.81 0.83 0.72 0.52 0.75 0.21 0.83 0.60]\n",
-      " [0.73 0.72 0.68 0.64 0.71 0.72 0.52 0.23 0.42 0.63]\n",
-      " [0.70 0.80 0.68 0.69 0.74 0.86 0.38 0.29 0.49 0.59]\n",
-      " [0.82 0.74 0.78 0.72 0.53 0.42 0.78 0.14 0.71 0.76]\n",
-      " [0.67 0.67 0.33 0.33 0.33 0.33 0.33 0.33 0.00 0.33]\n",
-      " [0.82 0.80 0.87 0.89 0.60 0.45 0.89 0.20 0.93 0.58]\n",
-      " [0.71 0.57 0.65 0.43 0.57 0.42 0.61 0.01 0.19 0.83]]\n"
+      "[[0.06 0.06 0.06 0.06 0.06 0.06 0.06 0.06 0.06 0.06]\n",
+      " [0.13 0.13 0.13 0.13 0.13 0.13 0.13 0.13 0.13 0.13]\n",
+      " [0.15 0.15 0.15 0.15 0.15 0.15 0.15 0.15 0.15 0.15]\n",
+      " [0.10 0.10 0.10 0.10 0.10 0.10 0.10 0.10 0.10 0.10]\n",
+      " [0.08 0.08 0.08 0.08 0.08 0.08 0.08 0.08 0.08 0.08]\n",
+      " [0.13 0.13 0.13 0.13 0.13 0.13 0.13 0.13 0.13 0.13]\n",
+      " [0.10 0.10 0.10 0.10 0.10 0.10 0.10 0.10 0.10 0.10]\n",
+      " [0.00 0.00 0.00 0.00 0.00 0.00 0.00 0.00 0.00 0.00]\n",
+      " [0.12 0.12 0.12 0.12 0.12 0.12 0.12 0.12 0.12 0.12]\n",
+      " [0.15 0.15 0.15 0.15 0.15 0.15 0.15 0.15 0.15 0.15]]\n"
      ]
     }
    ],
