--- a/celeba_transfer_attack_analysis.ipynb
+++ b/celeba_transfer_attack_analysis.ipynb
@@ -49,7 +49,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████| 80/80 [00:00<00:00, 234.33it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████| 80/80 [00:00<00:00, 229.79it/s]\n"
      ]
     },
     {
@@ -63,7 +63,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████| 80/80 [00:31<00:00,  2.54it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 80/80 [00:31<00:00,  2.56it/s]\n"
      ]
     },
     {
@@ -141,8 +141,9 @@
     "args_.locally_tune_clients = False\n",
     "args_.seed = 1234\n",
     "args_.verbose = 1\n",
-    "args_.save_path = '/home/ubuntu/FedEM_Shubh/FedEM/weights/celeba_prop_new/yes_macro_resources/'\n",
+    "args_.save_path = '/home/ubuntu/FedEM_Shubh/FedEM/weights/celeba_benign/fedem/'\n",
     "args_.validation = False\n",
+    "args_.tune_steps = False\n",
     "\n",
     "# Generate the dummy values here\n",
     "aggregator, clients = dummy_aggregator(args_, num_user=40)"
@@ -447,16 +448,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1.00 0.00 0.00 0.12 1.00 0.38 0.12 0.00 0.62 1.00]\n",
-      " [0.84 0.12 0.12 0.29 0.84 0.45 0.29 0.04 0.69 0.84]\n",
-      " [0.91 0.10 0.14 0.36 0.88 0.53 0.36 0.05 0.72 0.91]\n",
-      " [0.86 0.10 0.13 0.35 0.86 0.58 0.35 0.04 0.68 0.86]\n",
-      " [1.00 0.00 0.00 0.06 0.89 0.44 0.06 0.00 0.67 1.00]\n",
-      " [0.71 0.00 0.00 0.18 0.65 0.65 0.18 0.00 0.59 0.71]\n",
-      " [0.81 0.11 0.13 0.43 0.83 0.52 0.37 0.07 0.69 0.81]\n",
-      " [0.85 0.05 0.10 0.25 0.90 0.55 0.25 0.00 0.70 0.85]\n",
-      " [0.89 0.06 0.06 0.17 0.94 0.56 0.17 0.06 0.94 0.89]\n",
-      " [1.00 0.17 0.28 0.33 0.94 0.56 0.33 0.17 0.72 1.00]]\n"
+      "[[1.00 0.62 0.38 0.38 1.00 0.62 0.38 0.62 0.38 1.00]\n",
+      " [0.98 0.88 0.82 0.75 0.96 0.90 0.57 0.88 0.78 0.98]\n",
+      " [0.92 0.75 0.82 0.81 0.96 0.92 0.67 0.71 0.85 0.93]\n",
+      " [0.94 0.75 0.81 0.83 0.94 0.93 0.77 0.74 0.88 0.94]\n",
+      " [0.94 0.61 0.56 0.44 1.00 0.89 0.39 0.56 0.72 1.00]\n",
+      " [0.94 0.82 0.82 0.82 1.00 0.94 0.65 0.76 0.88 0.94]\n",
+      " [0.93 0.46 0.63 0.69 0.91 0.87 0.74 0.44 0.85 0.96]\n",
+      " [1.00 0.85 0.85 0.80 0.95 0.90 0.70 0.80 0.85 0.95]\n",
+      " [0.83 0.67 0.72 0.78 0.94 0.94 0.83 0.67 0.94 0.94]\n",
+      " [1.00 0.33 0.28 0.22 0.94 0.72 0.17 0.33 0.50 1.00]]\n"
      ]
     }
    ],
@@ -515,13 +516,13 @@
     {
      "data": {
       "text/plain": [
-       "array([[1.00, 0.00, 0.00, ..., 0.00, 0.75, 1.00],\n",
-       "       [0.84, 0.12, 0.12, ..., 0.22, 0.75, 0.84],\n",
-       "       [0.91, 0.10, 0.14, ..., 0.23, 0.84, 0.90],\n",
+       "array([[1.00, 0.62, 0.38, ..., 0.38, 1.00, 1.00],\n",
+       "       [0.98, 0.88, 0.82, ..., 0.53, 0.92, 0.98],\n",
+       "       [0.92, 0.75, 0.82, ..., 0.65, 0.93, 0.95],\n",
        "       ...,\n",
-       "       [0.86, 0.15, 0.15, ..., 0.21, 0.81, 0.85],\n",
-       "       [0.94, 0.06, 0.06, ..., 0.10, 0.91, 0.94],\n",
-       "       [1.00, 0.00, 0.00, ..., 0.00, 0.50, 1.00]])"
+       "       [0.91, 0.51, 0.64, ..., 0.81, 0.90, 0.91],\n",
+       "       [0.96, 0.55, 0.58, ..., 0.49, 0.94, 0.99],\n",
+       "       [1.00, 0.50, 0.50, ..., 0.50, 1.00, 1.00]])"
       ]
      },
      "execution_count": 11,
@@ -542,9 +543,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "adv_target: 0.4183496773478077\n",
-      "adv_miss: 0.3291548473091844\n",
-      "orig_acc: 0.5940186578780413\n"
+      "adv_target: 0.6757596512469001\n",
+      "adv_miss: 0.1294986568734599\n",
+      "orig_acc: 0.8055869042873383\n"
      ]
     }
    ],
@@ -556,23 +557,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.50 0.43 0.45 0.43 0.48 0.38 0.45 0.38 0.33 0.48]\n",
-      " [0.61 0.63 0.61 0.63 0.61 0.59 0.61 0.61 0.59 0.61]\n",
-      " [0.76 0.75 0.77 0.74 0.76 0.72 0.76 0.76 0.66 0.75]\n",
-      " [0.55 0.54 0.54 0.54 0.55 0.46 0.54 0.55 0.46 0.55]\n",
-      " [0.59 0.59 0.57 0.59 0.59 0.59 0.57 0.43 0.50 0.59]\n",
-      " [0.19 0.19 0.19 0.19 0.19 0.19 0.19 0.19 0.19 0.19]\n",
-      " [0.65 0.61 0.65 0.58 0.65 0.54 0.62 0.58 0.51 0.65]\n",
-      " [0.55 0.55 0.55 0.55 0.55 0.55 0.55 0.55 0.55 0.55]\n",
-      " [0.39 0.39 0.39 0.39 0.39 0.33 0.39 0.39 0.33 0.39]\n",
-      " [0.39 0.34 0.32 0.32 0.38 0.30 0.35 0.24 0.27 0.38]]\n"
+      "[[0.45 0.80 0.81 0.77 0.36 0.64 0.80 0.79 0.58 0.42]\n",
+      " [0.62 0.78 0.77 0.76 0.58 0.68 0.74 0.76 0.64 0.60]\n",
+      " [0.35 0.83 0.83 0.77 0.24 0.63 0.80 0.81 0.51 0.32]\n",
+      " [0.38 0.72 0.72 0.70 0.35 0.57 0.70 0.71 0.52 0.39]\n",
+      " [0.62 0.68 0.68 0.67 0.60 0.61 0.65 0.68 0.62 0.60]\n",
+      " [0.40 0.78 0.78 0.78 0.36 0.55 0.80 0.77 0.50 0.41]\n",
+      " [0.18 0.85 0.85 0.82 0.09 0.54 0.82 0.84 0.38 0.17]\n",
+      " [0.43 0.78 0.78 0.77 0.31 0.60 0.79 0.78 0.52 0.40]\n",
+      " [0.59 0.75 0.75 0.71 0.50 0.63 0.72 0.74 0.59 0.56]\n",
+      " [0.42 0.80 0.80 0.79 0.39 0.59 0.80 0.82 0.55 0.42]]\n"
      ]
     }
    ],
