--- a/celeba_transfer_attack_analysis_tuning.ipynb
+++ b/celeba_transfer_attack_analysis_tuning.ipynb
@@ -49,7 +49,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████| 80/80 [00:00<00:00, 189.71it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████| 80/80 [00:00<00:00, 195.93it/s]\n"
      ]
     },
     {
@@ -63,7 +63,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████| 80/80 [00:40<00:00,  1.99it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 80/80 [00:37<00:00,  2.11it/s]\n"
      ]
     },
     {
@@ -101,7 +101,7 @@
      "text": [
       "++++++++++++++++++++++++++++++\n",
       "Global..\n",
-      "Train Loss: 2.922 | Train Acc: 1.464% |Test Loss: 2.923 | Test Acc: 1.297% |\n",
+      "Train Loss: 2.292 | Train Acc: 12.373% |Test Loss: 2.294 | Test Acc: 11.886% |\n",
       "++++++++++++++++++++++++++++++++++++++++++++++++++\n",
       "################################################################################\n"
      ]
@@ -119,7 +119,7 @@
     "\n",
     "# Manually set argument parameters\n",
     "args_ = Args()\n",
-    "args_.experiment = \"celeba\"\n",
+    "args_.experiment = \"cifar10\"\n",
     "args_.method = setting\n",
     "args_.decentralized = False\n",
     "args_.sampling_rate = 1.0\n",
@@ -141,7 +141,7 @@
     "args_.locally_tune_clients = False\n",
     "args_.seed = 1234\n",
     "args_.verbose = 1\n",
-    "args_.save_path = '/home/ubuntu/FedEM_Shubh/FedEM/weights/celeba_fed_local/'\n",
+    "args_.save_path = 'weights/cifar_10/fedem_tune/1/'\n",
     "args_.validation = False\n",
     "args_.tune_steps = 10\n",
     "\n",
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,23 +451,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1.00 0.50 0.12 0.00 1.00 0.88 0.50 0.88 0.88 0.25]\n",
-      " [1.00 0.49 0.29 0.00 1.00 0.96 0.82 0.82 0.90 0.82]\n",
-      " [0.93 0.24 0.68 0.01 0.95 0.62 0.84 0.46 0.64 0.79]\n",
-      " [0.84 0.19 0.25 0.28 0.84 0.51 0.80 0.48 0.59 0.70]\n",
-      " [0.94 0.50 0.17 0.00 1.00 0.83 0.44 0.61 0.56 0.61]\n",
-      " [1.00 0.82 0.35 0.00 1.00 1.00 0.71 0.94 0.94 0.65]\n",
-      " [0.85 0.24 0.22 0.00 0.85 0.59 1.00 0.35 0.61 0.76]\n",
-      " [1.00 0.60 0.15 0.05 1.00 1.00 0.80 0.95 0.95 0.70]\n",
-      " [1.00 0.50 0.06 0.00 1.00 0.94 0.78 0.72 0.94 0.61]\n",
-      " [0.94 0.22 0.17 0.00 0.78 0.61 0.56 0.56 0.44 0.83]]\n"
+      "[[0.79 0.79 0.79 0.79 0.79 0.79 0.79 0.79 0.79 0.79]\n",
+      " [0.82 0.82 0.82 0.82 0.82 0.82 0.82 0.82 0.82 0.82]\n",
+      " [0.78 0.78 0.78 0.78 0.78 0.78 0.78 0.78 0.78 0.78]\n",
+      " [0.88 0.88 0.88 0.88 0.88 0.88 0.88 0.88 0.88 0.88]\n",
+      " [0.86 0.86 0.86 0.86 0.86 0.86 0.86 0.86 0.86 0.86]\n",
+      " [0.82 0.82 0.82 0.82 0.82 0.82 0.82 0.82 0.82 0.82]\n",
+      " [0.89 0.89 0.89 0.89 0.89 0.89 0.89 0.89 0.89 0.89]\n",
+      " [0.67 0.67 0.67 0.67 0.67 0.67 0.67 0.67 0.67 0.67]\n",
+      " [0.86 0.86 0.86 0.86 0.86 0.86 0.86 0.86 0.86 0.86]\n",
+      " [0.90 0.90 0.90 0.90 0.90 0.90 0.90 0.90 0.90 0.90]]\n"
      ]
     }
    ],
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,16 +500,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "40"
+       "0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,22 +520,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1.00, 0.50, 0.12, ..., 0.12, 1.00, 1.00],\n",
-       "       [1.00, 0.49, 0.29, ..., 0.22, 0.98, 1.00],\n",
-       "       [0.93, 0.24, 0.68, ..., 0.14, 0.83, 0.82],\n",
+       "array([[0.79, 0.79, 0.79, ..., 0.79, 0.79, 0.79],\n",
+       "       [0.82, 0.82, 0.82, ..., 0.82, 0.82, 0.82],\n",
+       "       [0.78, 0.78, 0.78, ..., 0.78, 0.78, 0.78],\n",
        "       ...,\n",
-       "       [0.97, 0.27, 0.38, ..., 0.63, 0.86, 1.00],\n",
-       "       [0.96, 0.42, 0.43, ..., 0.33, 0.99, 0.86],\n",
-       "       [1.00, 0.50, 0.00, ..., 0.00, 0.00, 1.00]])"
+       "       [0.86, 0.86, 0.86, ..., 0.86, 0.86, 0.86],\n",
+       "       [0.86, 0.86, 0.86, ..., 0.86, 0.86, 0.86],\n",
+       "       [0.82, 0.82, 0.82, ..., 0.82, 0.82, 0.82]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,16 +546,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "adv_target: 0.6843697061257977\n",
-      "adv_miss: 0.32903951115380875\n",
-      "orig_acc: 0.7034500204026699\n"
+      "adv_target: 0.8446682542562485\n",
+      "adv_miss: 0.0\n",
+      "orig_acc: 0.11151913315989077\n"
      ]
     }
    ],
@@ -567,23 +567,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.83 0.57 0.60 0.31 0.81 0.83 0.79 0.74 0.88 0.88]\n",
-      " [0.12 0.69 0.49 0.51 0.18 0.43 0.12 0.57 0.43 0.04]\n",
-      " [0.26 0.75 0.56 0.59 0.25 0.60 0.13 0.63 0.49 0.07]\n",
-      " [0.16 0.55 0.39 0.49 0.16 0.43 0.09 0.43 0.45 0.19]\n",
-      " [0.72 0.72 0.65 0.30 0.74 0.78 0.69 0.78 0.85 0.78]\n",
-      " [0.19 0.24 0.24 0.10 0.19 0.29 0.19 0.29 0.62 0.29]\n",
-      " [0.33 0.64 0.59 0.43 0.36 0.59 0.29 0.61 0.57 0.32]\n",
-      " [0.15 0.40 0.45 0.50 0.15 0.45 0.10 0.45 0.30 0.05]\n",
-      " [0.22 0.28 0.33 0.22 0.22 0.22 0.06 0.28 0.50 0.33]\n",
-      " [0.73 0.59 0.59 0.15 0.79 0.79 0.75 0.73 0.79 0.85]]\n"
+      "[[0.06 0.06 0.06 0.06 0.06 0.06 0.06 0.06 0.06 0.06]\n",
+      " [0.13 0.13 0.13 0.13 0.13 0.13 0.13 0.13 0.13 0.13]\n",
+      " [0.15 0.15 0.15 0.15 0.15 0.15 0.15 0.15 0.15 0.15]\n",
+      " [0.10 0.10 0.10 0.10 0.10 0.10 0.10 0.10 0.10 0.10]\n",
+      " [0.08 0.08 0.08 0.08 0.08 0.08 0.08 0.08 0.08 0.08]\n",
+      " [0.13 0.13 0.13 0.13 0.13 0.13 0.13 0.13 0.13 0.13]\n",
+      " [0.10 0.10 0.10 0.10 0.10 0.10 0.10 0.10 0.10 0.10]\n",
+      " [0.00 0.00 0.00 0.00 0.00 0.00 0.00 0.00 0.00 0.00]\n",
+      " [0.12 0.12 0.12 0.12 0.12 0.12 0.12 0.12 0.12 0.12]\n",
+      " [0.15 0.15 0.15 0.15 0.15 0.15 0.15 0.15 0.15 0.15]]\n"
      ]
     }
    ],
